--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <img src="" alt="" id="forcaImg">
         </div>
         <div class="gameContent">
+            <div>
+                <h1>TEMA: <span id="tema"></span></h1>
+            </div>
             <div class="inputContent">
                 <p>LETRA:</p>
                 <div>
@@ -29,7 +32,7 @@
             <div id="palavra">
             </div>
             <div class="exta">
-                <h3>Letras Usadas:</h3>
+                <h3>Letras Usadas</h3>
                 <div id="letrasUsadas">
                 </div>
             </div>
